filling up the pages, reducing size of carousel pages to 98% to avoid vertical scrollbar and updating the content

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
   font-family: sans-serif;
   /* animated shifting background with color gradient */
-  background: linear-gradient(-30deg, rgb(210 210 246), rgb(71, 71, 136));
+  background: linear-gradient(-30deg, rgb(210 210 246), rgb(119, 119, 232));
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
   height: 125hv;
@@ -67,15 +67,16 @@ main {
   margin: 0px;
   padding: 0px;
   width: 100%;
-  height: 110vh;
+  height: 120vh;
 }
 
 ul.carousel {
   width: 100%;
   height: 50%;
   padding: 0;
+  margin-top: 30px;
   display: flex;
-  gap: 20px;
+  gap: 30px;
   overflow-x: scroll;
   /* overflow-y: hidden; */
   scroll-snap-type: x mandatory;
@@ -88,7 +89,7 @@ ul.carousel li {
 
 .carousel_page {
   width: 400px;
-  height: 100%;
+  height: 98%; /* less than 100% to avoid annoying vertical scrollbar*/
   list-style-type: none;
   background-color: #eeeeee;
   /* border: 0px solid #000000; */
